add fonts, style and layout

--- a/src/app/theme/footer/footer.component.html
+++ b/src/app/theme/footer/footer.component.html
@@ -1,1 +1,42 @@
-<p>footer works!</p>
+<footer class="footer__app">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6">
+        <a class="nav-link name__app" aria-current="page" href="#">CheemsStore</a>
+        <div class="input-group mt-2">
+          <input type="text" class="form-control" placeholder="Search...">
+          <button class="btn button__search" type="button">Sign Up</button>
+        </div>
+        <p class="title__child__footer">Contact Info</p>
+        <p class="title__child__footer">KTX Khu A - DHQG - Dong Hoa - Di An - Thu Duc</p>
+      </div>
+      <div class="col-lg-2">
+        <p class="title__footer">
+          Categories
+        </p>
+        <p class="title__child__footer">Laptops & Computers</p>
+        <p class="title__child__footer">Laptops & Computers</p>
+        <p class="title__child__footer">Laptops & Computers</p>
+        <p class="title__child__footer">Laptops & Computers</p>
+      </div>
+      <div class="col-lg-2">
+        <p class="title__footer">
+          Customer Care
+        </p>
+        <p class="title__child__footer">Laptops & Computers</p>
+        <p class="title__child__footer">Laptops & Computers</p>
+        <p class="title__child__footer">Laptops & Computers</p>
+        <p class="title__child__footer">Laptops & Computers</p>
+      </div>
+      <div class="col-lg-2">
+        <p class="title__footer">
+          Pages
+        </p>
+        <p class="title__child__footer">Laptops & Computers</p>
+        <p class="title__child__footer">Laptops & Computers</p>
+        <p class="title__child__footer">Laptops & Computers</p>
+        <p class="title__child__footer">Laptops & Computers</p>
+      </div>
+    </div>
+  </div>
+</footer>
