--- a/src/app/theme/header/header.component.html
+++ b/src/app/theme/header/header.component.html
@@ -1,1 +1,94 @@
-<p>header works!</p>
+<header>
+  <nav class="navbar nav__top">
+    <div class="container">
+      <div class="header-first">
+        <a class="style-header-text" style="margin-right: 30px;" href="mailto:mwcshop@gmail.com">
+          <img src="./../../../assets/images/ic-message.svg" />
+          <span>
+            19521399@gmail.com
+          </span>
+        </a>
+
+        <a class="style-header-text" href="mailto:mwcshop@gmail.com"> <img
+            src="./../../../assets/images/ic_phone.svg" />
+          <span>
+            0857550531
+          </span>
+        </a>
+
+        <div class="navbar__spacer"></div>
+
+        <div>
+          <ul class="navbar__nav">
+            <li class="nav__item">
+              <a class="nav-link" aria-current="page" href="#">
+                <span style="margin: 0;">
+                  English
+                </span>
+                <i class="ai-chevron-down"></i>
+              </a>
+            </li>
+
+            <li class="nav__item">
+              <a class="nav-link">
+                <span style="margin: 0;">
+                  USA
+                </span>
+                <i class="ai-chevron-down"></i>
+              </a>
+            </li>
+
+            <li class="nav__item">
+              <a class="nav-link" aria-current="page" href="#">
+                <span style="margin: 0;">
+                  Login
+                </span>
+                <i class="ai-person"></i>
+              </a>
+            </li>
+
+            <li class="nav__item">
+              <a class="nav-link" aria-current="page" href="#">
+                <span style="margin: 0;">
+                  Wishlist
+                </span>
+                <i class="ai-heart"></i>
+              </a>
+            </li>
+
+            <li class="nav__item" style="margin-right: 0px;">
+              <a class="nav-link" aria-current="page" href="#">
+                <i class="ai-cart"></i>
+              </a>
+            </li>
+
+          </ul>
+        </div>
+      </div>
+    </div>
+  </nav>
+
+  <div class="container">
+    <div class="header-second">
+      <nav class="navbar nav__botom">
+        <a class="nav-link nav__item__header__bottom" aria-current="page" href="#">CheemsStore</a>
+        <a class="nav-link nav__item__bottom active"  href="#">Home</a>
+        <a class="nav-link nav__item__bottom" href="#">Pages</a>
+        <a class="nav-link nav__item__bottom" href="#">Product</a>
+        <a class="nav-link nav__item__bottom" href="#">Blog</a>
+        <a class="nav-link nav__item__bottom" href="#">Shop</a>
+        <a class="nav-link nav__item__bottom" href="#">Contact</a>
+      </nav>
+
+      <div class="navbar__spacer"></div>
+      <div class="nav__search">
+        <div class="input-group mt-2">
+          <input type="text" class="form-control" placeholder="Search...">
+          <button class="btn button__search" type="button"><i class="ai-search"></i></button>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</header>
+
