--- a/src/app/theme/layout/layout.component.html
+++ b/src/app/theme/layout/layout.component.html
@@ -1,1 +1,8 @@
-<p>layout works!</p>
+<div class="wrapper">
+  <app-header style="min-height: 10%;"></app-header>
+  <div class="container content">
+    <router-outlet></router-outlet>
+  </div>
+  <div class="clr"></div>
+  <app-footer style="min-height: 20%;"></app-footer>
+</div>
