--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
-<div class="container" style="background-color: aqua;">
-  <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+<div class="container">
+  <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" style="margin-bottom: 30px;">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -33,6 +33,26 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
     </button>
+  </div>
+
+  <div class="row">
+    <div class="col-lg-3">
+      <app-property-card>
+      </app-property-card>
+    </div>
+    <div class="col-lg-3">
+      <app-property-card>
+      </app-property-card>
+    </div>
+    <div class="col-lg-3">
+      <app-property-card>
+      </app-property-card>
+    </div>
+
+    <div class="col-lg-3">
+      <app-property-card>
+      </app-property-card>
+    </div>
   </div>
 </div>
 
