--- a/src/app/theme/header/header.component.html
+++ b/src/app/theme/header/header.component.html
@@ -2,7 +2,7 @@
   <nav class="navbar nav__top">
     <div class="container">
       <div class="header-first">
-        <a class="style-header-text" style="margin-right: 30px;" href="mailto:mwcshop@gmail.com">
+        <a class="style-header-text" style="margin-right: 30px;" href="mailto:19521399@gmail.com">
           <img src="./../../../assets/images/ic-message.svg" />
           <span>
             19521399@gmail.com
@@ -30,7 +30,7 @@
             </li>
 
             <li class="nav__item">
-              <a class="nav-link">
+              <a class="nav-link" routerLink="/login">
                 <span style="margin: 0;">
                   USA
                 </span>
@@ -39,7 +39,7 @@
             </li>
 
             <li class="nav__item">
-              <a class="nav-link" aria-current="page" href="#">
+              <a class="nav-link"  routerLink="/login">
                 <span style="margin: 0;">
                   Login
                 </span>
@@ -72,7 +72,7 @@
     <div class="header-second">
       <nav class="navbar nav__botom">
         <a class="nav-link nav__item__header__bottom" aria-current="page" href="#">CheemsStore</a>
-        <a class="nav-link nav__item__bottom active"  href="#">Home</a>
+        <a class="nav-link nav__item__bottom"  href="#">Home</a>
         <a class="nav-link nav__item__bottom" href="#">Pages</a>
         <a class="nav-link nav__item__bottom" href="#">Product</a>
         <a class="nav-link nav__item__bottom" href="#">Blog</a>
