--- a/src/app/theme/layout/layout.component.html
+++ b/src/app/theme/layout/layout.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
   <app-header style="min-height: 10%;"></app-header>
-  <div class="container content">
+  <div class="content">
     <router-outlet></router-outlet>
   </div>
   <div class="clr"></div>
