feat: add contact us fix UI home, product

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="cc">
   <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" style="margin-bottom: 30px;">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -8,20 +8,65 @@
     <div class="carousel-inner">
       <div class="carousel-item active">
         <!-- <img src="..." class="d-block w-100" alt="..."> -->
-        <div class="container">
-          <h1>Em yeu anh nhieu lam 1</h1>
+        <div class="content">
+          <div class="description-text flex-width-60">
+              <div class="title">
+                New Furniture Collection
+                Trends in 2020
+              </div>
+              <div class="text">
+                Lorem ipsum dolor sit, officiis ea vel veritatis enim aspernatur? Soluta tempore id atque placeat aspernatur? Exercitationem tempore impedit, corrupti nobis officia cumque minus nisi!
+              </div>
+          </div>
+          <div class="description-image flex-width-40">
+            <div class="circle p-absolute">
+            </div>
+            <div class="circle p-absolute">
+              <img src="../../../assets/images/beidou-emoji.png" alt="">
+            </div>
+          </div>
         </div>
       </div>
       <div class="carousel-item">
         <!-- <img src="..." class="d-block w-100" alt="..."> -->
-        <div class="container">
-          <h1>Em yeu anh nhieu lam 2</h1>
+        <div class="content">
+          <div class="description-text flex-width-60">
+              <div class="title">
+                New Furniture Collection
+                Trends in 2020
+              </div>
+              <div class="text">
+                Lorem ipsum dolor sit, officiis ea vel veritatis enim aspernatur? Soluta tempore id atque placeat aspernatur? Exercitationem tempore impedit, corrupti nobis officia cumque minus nisi!
+              </div>
+          </div>
+          <div class="description-image flex-width-40">
+            <div class="circle p-absolute">
+            </div>
+            <div class="circle p-absolute">
+              <img src="../../../assets/images/beidou-emoji.png" alt="">
+            </div>
+          </div>
         </div>
       </div>
       <div class="carousel-item">
         <!-- <img src="..." class="d-block w-100" alt="..."> -->
-        <div class="container">
-          <h1>Em yeu anh nhieu lam 3</h1>
+        <div class="content">
+          <div class="description-text flex-width-60">
+              <div class="title">
+                New Furniture Collection
+                Trends in 2020
+              </div>
+              <div class="text">
+                Lorem ipsum dolor sit, officiis ea vel veritatis enim aspernatur? Soluta tempore id atque placeat aspernatur? Exercitationem tempore impedit, corrupti nobis officia cumque minus nisi!
+              </div>
+          </div>
+          <div class="description-image flex-width-40">
+            <div class="circle p-absolute">
+            </div>
+            <div class="circle p-absolute">
+              <img src="../../../assets/images/beidou-emoji.png" alt="">
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -35,23 +80,31 @@
     </button>
   </div>
 
-  <div class="row">
-    <div class="col-lg-3">
-      <app-property-card>
-      </app-property-card>
-    </div>
-    <div class="col-lg-3">
-      <app-property-card>
-      </app-property-card>
-    </div>
-    <div class="col-lg-3">
-      <app-property-card>
-      </app-property-card>
-    </div>
 
-    <div class="col-lg-3">
-      <app-property-card>
-      </app-property-card>
+  <div class="container body-container">
+    <div class="content">
+      <div class="title">
+        Featured Products
+      </div>
+      <div class="list-card">
+        <div class="item-style">
+          <app-property-card>
+          </app-property-card>
+        </div>
+        <div class="item-style">
+          <app-property-card>
+          </app-property-card>
+        </div>
+        <div class="item-style">
+          <app-property-card>
+          </app-property-card>
+        </div>
+
+        <div class="item-style">
+          <app-property-card>
+          </app-property-card>
+        </div>
+      </div>
     </div>
   </div>
 </div>
