--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -10,7 +10,7 @@
     </div>
   </div>
 
-  <div class="container">
+  <div class="container m-common">
     <div class="login-content">
       <div class="login-title">Login</div>
       <div class="login-sub-title">
@@ -23,8 +23,8 @@
         <div class="input-margin">
           <input class="form-control" type="text" placeholder="Password">
         </div>
-        <div>
-          <a class="forgot-password">
+        <div class="forgot-password">
+          <a>
             Forgot your Password?
           </a>
         </div>
