--- a/src/app/theme/footer/footer.component.html
+++ b/src/app/theme/footer/footer.component.html
@@ -4,7 +4,7 @@
       <div class="col-lg-6">
         <a class="nav-link name__app" aria-current="page" href="#">CheemsStore</a>
         <div class="input-group mt-2">
-          <input type="text" class="form-control" placeholder="Search...">
+          <input type="text" class="form-control" placeholder="Enter Email Address">
           <button class="btn button__search" type="button">Sign Up</button>
         </div>
         <p class="title__child__footer">Contact Info</p>
