--- a/src/app/theme/header/header.component.html
+++ b/src/app/theme/header/header.component.html
@@ -30,15 +30,6 @@
             </li>
 
             <li class="nav__item">
-              <a class="nav-link" routerLink="/login">
-                <span style="margin: 0;">
-                  USA
-                </span>
-                <i class="ai-chevron-down"></i>
-              </a>
-            </li>
-
-            <li class="nav__item">
               <a class="nav-link"  routerLink="/login">
                 <span style="margin: 0;">
                   Login
@@ -57,7 +48,7 @@
             </li>
 
             <li class="nav__item" style="margin-right: 0px;">
-              <a class="nav-link" aria-current="page" href="#">
+              <a class="nav-link" aria-current="page" routerLink="/shopping-cart">
                 <i class="ai-cart"></i>
               </a>
             </li>
@@ -72,12 +63,12 @@
     <div class="header-second">
       <nav class="navbar nav__botom">
         <a class="nav-link nav__item__header__bottom" aria-current="page" href="#">CheemsStore</a>
-        <a class="nav-link nav__item__bottom"  href="#">Home</a>
-        <a class="nav-link nav__item__bottom" href="#">Pages</a>
-        <a class="nav-link nav__item__bottom" href="#">Product</a>
+        <a class="nav-link nav__item__bottom"  href="#">Trang chủ</a>
+        <a class="nav-link nav__item__bottom" href="#">Giới thiệu</a>
+        <a class="nav-link nav__item__bottom" routerLink="/product-list">Sản phẩm</a>
+        <a class="nav-link nav__item__bottom" href="#">Khuyến mãi</a>
         <a class="nav-link nav__item__bottom" href="#">Blog</a>
-        <a class="nav-link nav__item__bottom" href="#">Shop</a>
-        <a class="nav-link nav__item__bottom" href="#">Contact</a>
+        <a class="nav-link nav__item__bottom" routerLink="/contact-us">Liên hệ</a>
       </nav>
 
       <div class="navbar__spacer"></div>
