--- a/src/app/theme/layout/layout.component.html
+++ b/src/app/theme/layout/layout.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-  <app-header style="min-height: 10%;"></app-header>
+  <app-header style="min-height: 10%;" class="header-style"></app-header>
   <div class="content">
     <router-outlet></router-outlet>
   </div>
