--- a/src/app/theme/layout/layout.component.scss
+++ b/src/app/theme/layout/layout.component.scss
@@ -1,6 +1,6 @@
 .clr {
   clear: both;
-  }
+}
 
 .content {
   height: 50%;
@@ -12,4 +12,12 @@
   margin: 0;
   display: grid;
   grid-template-rows: auto 1fr auto;
+}
+
+.header-style {
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  background-color: white;
+  box-shadow: 0px 0px 12px rgb(227, 224, 224);
 }
