--- a/src/app/pages/product-list/product-list.component.html
+++ b/src/app/pages/product-list/product-list.component.html
@@ -1,1 +1,89 @@
-<p>product-list works!</p>
+<div class="product-list">
+  <div class="title-container">
+    <div class="container">
+      <div class="title-text">
+        Product
+      </div>
+      <div class="title-route">
+        Home.<span>Product</span>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="container m-common">
+    <div class="category-list">
+      <ul class="main-menu">
+        <span>Category</span>
+        <a type="button">
+          <i class="fa fa-laptop"></i>
+          <span> Laptop</span>
+        </a>
+        <a type="button">
+          <i class="fa fa-mobile"></i>
+          <span> Mobile</span>
+        </a>
+        <a type="button">
+          <i class="fa fa-tablet"></i>
+          <span> Tablet</span>
+        </a>
+        <a type="button">
+          <i class="ai-watch-device"></i>
+          <span> Smart Watch</span>
+        </a>
+        <a type="button">
+          <i class="fa fa-computer-mouse"></i>
+          <span> Accessory</span>
+        </a>
+      </ul>
+    </div>
+    <div class="filter-list">
+        <i class="ai-filter"></i>
+        <div class="btn-group">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+            Dropdown
+          </button>
+          <ul class="dropdown-menu">
+            <div class="price">
+              <label for="price-from" class="form-label">Price From</label>
+              <input type="number" class="form-control" id="price-from">
+            </div>
+            <div class="price">
+              <label for="price-to" class="form-label">Price To</label>
+              <input type="number" class="form-control" id="price-to">
+            </div>
+            <div class="price">
+              <button class="form-control" style="background-color: #FB2E86; color: white;">Ok</button>
+            </div>
+          </ul>
+        </div>
+        <div class="sort-by">
+          <select class="form-select">
+            <option selected hidden>Sorted by</option>
+            <option value="1">Giá giảm</option>
+            <option value="2">Giá tăng</option>
+            <option value="3">Three</option>
+          </select>
+        </div>
+    </div>
+    <div class="list-card">
+      <div class="item-style">
+        <app-property-card>
+        </app-property-card>
+      </div>
+      <div class="item-style">
+        <app-property-card>
+        </app-property-card>
+      </div>
+      <div class="item-style">
+        <app-property-card>
+        </app-property-card>
+      </div>
+
+      <div class="item-style">
+        <app-property-card>
+        </app-property-card>
+      </div>
+    </div>
+  </div>
+</div>
