--- a/src/app/pages/shopping-cart/shopping-cart.component.html
+++ b/src/app/pages/shopping-cart/shopping-cart.component.html
@@ -1,1 +1,86 @@
-<p>shopping-cart works!</p>
+<div class="product-details">
+  <div class="title-container">
+    <div class="container">
+      <div class="title-text">
+        Shopping Cart
+      </div>
+      <div class="title-route">
+        Route. Page. <span>Shopping Cart</span>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="container">
+    <div class="row mx-50">
+      <div class="col-lg-8">
+        <table style="width:100%">
+          <thead>
+            <tr>
+              <th style="width: 40%;">Product</th>
+              <th style="width: 20%;">Price</th>
+              <th style="width: 20%;">Quantity</th>
+              <th style="width: 20%;">Total</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td ><ng-container *ngTemplateOutlet="smallProductCard"></ng-container></td>
+              <td>Maria Anders</td>
+              <td>Germany</td>
+              <td>Germany</td>
+            </tr>
+            <tr>
+              <td><ng-container *ngTemplateOutlet="smallProductCard"></ng-container></td>
+              <td>Maria Anders</td>
+              <td>Germany</td>
+              <td>Germany</td>
+            </tr>
+            <tr>
+              <td><ng-container *ngTemplateOutlet="smallProductCard"></ng-container></td>
+              <td>Maria Anders</td>
+              <td >Germany</td>
+              <td>Germany</td>
+            </tr>
+            <tr>
+              <td><ng-container *ngTemplateOutlet="smallProductCard"></ng-container></td>
+              <td>Maria Anders</td>
+              <td>Germany</td>
+              <td>Germany</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="col-lg-4 cart-total-style">
+        <div class="title">
+          Cart Total
+        </div>
+        <div class="container">
+          <div class="total-style">
+            Subtotals: <span>£219.00</span>
+          </div>
+          <div class="total-style">
+            Totals: <span>£219.00</span>
+          </div>
+
+          <button class="form-control">
+            Proceed To Checkout
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<ng-template #smallProductCard>
+  <div class="small-product-card">
+    <img src="../../../assets/images/beidou.jpg" alt="">
+    <div class="content-product">
+      <div class="name-product">Beidou</div>
+      <div class="property">
+        Catagory: <span>Hello</span>
+      </div>
+    </div>
+  </div>
+</ng-template>
