--- a/src/app/shares/components/property-card/property-card.component.scss
+++ b/src/app/shares/components/property-card/property-card.component.scss
@@ -26,18 +26,12 @@
 
 .carousel-inner > .carousel-item > img {
   width: 100%;
-  height: 200px;
+  height: 100%;
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
   background-color: #f9fafc;
   //border-bottom: 1px solid #ccc;
-}
-
-@media screen and (max-width: 600px) {
-  .carousel-inner > .carousel-item > img {
-    height: 260px;
-  }
 }
 
 
@@ -63,8 +57,8 @@
     }
   }
 
+  background-color: #2F1AC4;
   .card-body {
-    background-color: #2F1AC4;
 
     .card-title {
       color: #f9fafc;
