build code to deploy app with Github Page

--- a/src/app/pages/product-list/product-list.component.html
+++ b/src/app/pages/product-list/product-list.component.html
@@ -41,7 +41,7 @@
         <i class="ai-filter"></i>
         <div class="btn-group">
           <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
+            Giá bán
           </button>
           <ul class="dropdown-menu">
             <div class="price">
