--- a/src/app/theme/layout/layout.component.html
+++ b/src/app/theme/layout/layout.component.html
@@ -1,6 +1,6 @@
-<div class="wrapper">
+<div class="wrapper" onscroll="check($event)">
   <app-header style="min-height: 10%;" class="header-style"></app-header>
-  <div class="content">
+  <div class="content" onscroll="check($event)">
     <router-outlet></router-outlet>
   </div>
   <div class="clr"></div>
