--- a/src/app/shares/components/property-card/property-card.component.html
+++ b/src/app/shares/components/property-card/property-card.component.html
@@ -1,6 +1,20 @@
 <div class="card" style="width: 100%;">
   <div class="card-img-top">
+
     <div id="slideShowProduct" class="carousel slide carousel-fade" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="https://dung-kun.github.io/cheems-angular-web/assets/images/ganyu-1.png" class="rounded-top" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="https://dung-kun.github.io/cheems-angular-web/assets/images/beidou.jpg" class="rounded-top" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="https://dung-kun.github.io/cheems-angular-web/assets/images/hutao.jpg" class="rounded-top" alt="...">
+        </div>
+      </div>
+    </div>
+    <!-- <div id="slideShowProduct" class="carousel slide carousel-fade" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="./../../../../assets/images/ganyu-1.png" class="rounded-top" alt="...">
@@ -12,7 +26,7 @@
           <img src="./../../../../assets/images/hutao.jpg" class="rounded-top" alt="...">
         </div>
       </div>
-    </div>
+    </div> -->
     <div class="icon-top">
       <div class="circle">
         <i class="ai-cart"></i>
