--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -22,7 +22,7 @@
             <div class="circle p-absolute">
             </div>
             <div class="circle p-absolute">
-              <img src="../../../assets/images/beidou-emoji.png" alt="">
+              <img src="https://dung-kun.github.io/cheems-angular-web/assets/images/beidou-emoji.png" alt="">
             </div>
           </div>
         </div>
@@ -43,7 +43,7 @@
             <div class="circle p-absolute">
             </div>
             <div class="circle p-absolute">
-              <img src="../../../assets/images/beidou-emoji.png" alt="">
+              <img src="https://dung-kun.github.io/cheems-angular-web/assets/images/beidou-emoji.png" alt="">
             </div>
           </div>
         </div>
@@ -64,7 +64,7 @@
             <div class="circle p-absolute">
             </div>
             <div class="circle p-absolute">
-              <img src="../../../assets/images/beidou-emoji.png" alt="">
+              <img src="https://dung-kun.github.io/cheems-angular-web/images/beidou-emoji.png" alt="">
             </div>
           </div>
         </div>
