--- a/src/app/pages/product-details/product-details.component.html
+++ b/src/app/pages/product-details/product-details.component.html
@@ -16,14 +16,14 @@
         <div class="w-50">
           <div class="carousel-image">
             <div class="image-selected">
-              <img src="./../../../../assets/images/ganyu-1.png" class="rounded" alt="...">
+              <img src="https://dung-kun.github.io/cheems-angular-web/assets/images/ganyu-1.png" class="rounded" alt="...">
             </div>
 
             <div class="image-list">
-              <img src="./../../../../assets/images/ganyu-1.png" class="rounded" alt="...">
-              <img src="./../../../../assets/images/ganyu-1.png" class="rounded" alt="...">
-              <img src="./../../../../assets/images/ganyu-1.png" class="rounded" alt="...">
-              <img src="./../../../../assets/images/ganyu-1.png" class="rounded" alt="...">
+              <img src="https://dung-kun.github.io/cheems-angular-web/assets/images/ganyu-1.png" class="rounded" alt="...">
+              <img src="https://dung-kun.github.io/cheems-angular-web/assets/images/ganyu-1.png" class="rounded" alt="...">
+              <img src="https://dung-kun.github.io/cheems-angular-web/assets/images/ganyu-1.png" class="rounded" alt="...">
+              <img src="https://dung-kun.github.io/cheems-angular-web/assets/images/ganyu-1.png" class="rounded" alt="...">
               <!-- <button class="slideLeft" type="button">Slide left</button>
               <button class="slideRight" type="button">Slide right</button> -->
             </div>
