--- a/src/app/shares/components/property-card/property-card.component.html
+++ b/src/app/shares/components/property-card/property-card.component.html
@@ -1,6 +1,6 @@
 <div class="card" style="width: 100%;">
   <div class="card-img-top">
-
+    <!-- deploy app
     <div id="slideShowProduct" class="carousel slide carousel-fade" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -13,8 +13,8 @@
           <img src="https://dung-kun.github.io/cheems-angular-web/assets/images/hutao.jpg" class="rounded-top" alt="...">
         </div>
       </div>
-    </div>
-    <!-- <div id="slideShowProduct" class="carousel slide carousel-fade" data-bs-ride="carousel">
+    </div> -->
+    <div id="slideShowProduct" class="carousel slide carousel-fade" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="./../../../../assets/images/ganyu-1.png" class="rounded-top" alt="...">
@@ -26,7 +26,7 @@
           <img src="./../../../../assets/images/hutao.jpg" class="rounded-top" alt="...">
         </div>
       </div>
-    </div> -->
+    </div>
     <div class="icon-top">
       <div class="circle">
         <i class="ai-cart"></i>
