--- a/src/app/theme/header/header.component.html
+++ b/src/app/theme/header/header.component.html
@@ -3,14 +3,14 @@
     <div class="container">
       <div class="header-first">
         <a class="style-header-text" style="margin-right: 30px;" href="mailto:19521399@gmail.com">
-          <img src="./../../../assets/images/ic-message.svg" />
+          <img src="https://dung-kun.github.io/cheems-angular-web/assets/images/ic-message.svg" />
           <span>
             19521399@gmail.com
           </span>
         </a>
 
         <a class="style-header-text" href="mailto:mwcshop@gmail.com"> <img
-            src="./../../../assets/images/ic_phone.svg" />
+            src="https://dung-kun.github.io/cheems-angular-web/assets/images/ic_phone.svg" />
           <span>
             0857550531
           </span>
