feat: add some pages introduction, sales, checkout change product list page

--- a/src/app/pages/product-list/product-list.component.html
+++ b/src/app/pages/product-list/product-list.component.html
@@ -12,77 +12,210 @@
 
 
   <div class="container m-common">
-    <div class="category-list">
-      <ul class="main-menu">
-        <span>Category</span>
-        <a type="button">
-          <i class="fa fa-laptop"></i>
-          <span> Laptop</span>
-        </a>
-        <a type="button">
-          <i class="fa fa-mobile"></i>
-          <span> Mobile</span>
-        </a>
-        <a type="button">
-          <i class="fa fa-tablet"></i>
-          <span> Tablet</span>
-        </a>
-        <a type="button">
-          <i class="ai-watch-device"></i>
-          <span> Smart Watch</span>
-        </a>
-        <a type="button">
-          <i class="fa fa-computer-mouse"></i>
-          <span> Accessory</span>
-        </a>
-      </ul>
-    </div>
-    <div class="filter-list">
-        <i class="ai-filter"></i>
-        <div class="btn-group">
-          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-            Giá bán
-          </button>
-          <ul class="dropdown-menu">
-            <div class="price">
-              <label for="price-from" class="form-label">Price From</label>
-              <input type="number" class="form-control" id="price-from">
-            </div>
-            <div class="price">
-              <label for="price-to" class="form-label">Price To</label>
-              <input type="number" class="form-control" id="price-to">
-            </div>
-            <div class="price">
-              <button class="form-control" style="background-color: #FB2E86; color: white;">Ok</button>
-            </div>
+    <div class="sidebar-plus-content">
+      <aside class="page-sidebar">
+        <nav class="secondary-nav">
+          <ul id="menu-links" role="menubar">
+            <li class="list-group">
+              <strong class="list-group-title is-opened" data-tracking-label="new-arrivals">New Arrivals</strong>
+              <ul class="menu" role="menu">
+                <li class="item">
+                  <a class="link " href="/en_us/women/new-arrivals/view-all.html" role="menuitem"
+                    data-tracking-label="view-all">
+                    View All</a>
+                </li>
+                <li class="list-group">
+                  <a class="link current" href="/en_us/women/new-arrivals/clothes.html" role="menuitem"
+                    data-tracking-label="clothes">
+                    Clothes</a>
+                  <ul class="menu" role="menu" style="display: none">
+                  </ul>
+                </li>
+                <li class="item">
+                  <a class="link " href="/en_us/women/new-arrivals/shoes-accessories.html" role="menuitem"
+                    data-tracking-label="shoes-accessories">
+                    Shoes &amp; Accessories</a>
+                </li>
+                <li class="item">
+                  <a class="link " href="/en_us/women/new-arrivals/beauty.html" role="menuitem"
+                    data-tracking-label="beauty">
+                    Beauty</a>
+                </li>
+                <li class="item">
+                  <a class="link " href="/en_us/women/new-arrivals/underwear-nightwear.html" role="menuitem"
+                    data-tracking-label="underwear-nightwear">
+                    Underwear &amp; Nightwear</a>
+                </li>
+              </ul>
+            </li>
+            <li class="list-group">
+              <strong class="list-group-title " data-tracking-label="seasonal-trending">Holiday &amp; Trending
+                Now</strong>
+              <ul class="menu" role="menu">
+                <li class="item">
+                  <a class="link " href="/en_us/women/seasonal-trending/holiday.html" role="menuitem"
+                    data-tracking-label="holiday">
+                    The Holiday Shop</a>
+                </li>
+                <li class="item">
+                  <a class="link " href="/en_us/women/seasonal-trending/winter.html" role="menuitem"
+                    data-tracking-label="winter">
+                    Winter must-haves</a>
+                </li>
+                <li class="item">
+                  <a class="link " href="/en_us/women/seasonal-trending/trend-edit.html" role="menuitem"
+                    data-tracking-label="trend-concept">
+                    Trend edit</a>
+                </li>
+                <li class="item">
+                  <a class="link " href="/en_us/women/seasonal-trending/neutrals.html" role="menuitem"
+                    data-tracking-label="neutral">
+                    A new minimalism</a>
+                </li>
+                <li class="item">
+                  <a class="link " href="/en_us/women/seasonal-trending/y2k-fashion.html" role="menuitem"
+                    data-tracking-label="y2k">
+                    Y2K fashion</a>
+                </li>
+                <li class="item">
+                  <a class="link " href="/en_us/women/seasonal-trending/autumn1.html" role="menuitem"
+                    data-tracking-label="autumn1">
+                    Sunny Styles</a>
+                </li>
+              </ul>
+            </li>
+            <li class="list-group">
+              <strong class="list-group-title " data-tracking-label="deals">Offers</strong>
+              <ul class="menu" role="menu">
+                <li class="item">
+                  <a class="link " href="/en_us/women/deals/student-discount-get-15-off.html" role="menuitem"
+                    data-tracking-label="student-discount-get-15-off">
+                    Student Discount</a>
+                </li>
+                <li class="item">
+                  <a class="link " href="/en_us/women/deals/sale-view-all.html" role="menuitem"
+                    data-tracking-label="sale-view-all">
+                    Black Friday deals up to 70% off</a>
+                </li>
+              </ul>
+            </li>
+            <li class="list-group">
+              <strong class="list-group-title " data-tracking-label="gift-cards">Gifting</strong>
+              <ul class="menu" role="menu">
+                <li class="item">
+                  <a class="link " href="/en_us/women/gift-cards/gift-card.html" role="menuitem"
+                    data-tracking-label="gift-card">
+                    Gift Cards</a>
+                </li>
+                <li class="item">
+                  <a class="link " href="/en_us/women/gift-cards/gift-guide.html" role="menuitem"
+                    data-tracking-label="gift-guide">
+                    Gift Guide</a>
+                </li>
+              </ul>
+            </li>
+            <li class="list-group">
+              <strong class="list-group-title " data-tracking-label="sustainability">Sustainability</strong>
+              <ul class="menu" role="menu">
+                <li class="item">
+                  <a class="link " href="/en_us/women/sustainability/take-care.html" role="menuitem"
+                    data-tracking-label="take-care">
+                    H&amp;M Take Care</a>
+                </li>
+                <li class="item">
+                  <a class="link " href="/en_us/women/sustainability/learn-more.html" role="menuitem"
+                    data-tracking-label="learn-more">
+                    Learn More</a>
+                </li>
+              </ul>
+            </li>
           </ul>
+        </nav>
+      </aside>
+      <div class="page-content">
+        <h1 class="title-category">
+          Laptop
+        </h1>
+        <div class="product-filter-container">
+          <div class="filter-list">
+            <!-- <i class="ai-settings-horizontal"></i> -->
+            <div class="btn-group">
+              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                data-bs-toggle="dropdown" aria-expanded="false">
+                Giá bán
+              </button>
+              <ul class="dropdown-menu">
+                <div class="price">
+                  <label for="price-from" class="form-label">Từ (VNĐ)</label>
+                  <input type="number" class="form-control" id="price-from">
+                </div>
+                <div class="price">
+                  <label for="price-to" class="form-label">Đến (VNĐ)</label>
+                  <input type="number" class="form-control" id="price-to">
+                </div>
+                <div class="price">
+                  <button class="form-control" style="background-color: #FB2E86; color: white;">Ok</button>
+                </div>
+              </ul>
+            </div>
+            <div class="sort-by">
+              <select class="form-select">
+                <option selected hidden>Sorted by</option>
+                <option value="1">Giá giảm</option>
+                <option value="2">Giá tăng</option>
+                <option value="3">Three</option>
+              </select>
+            </div>
+          </div>
         </div>
-        <div class="sort-by">
-          <select class="form-select">
-            <option selected hidden>Sorted by</option>
-            <option value="1">Giá giảm</option>
-            <option value="2">Giá tăng</option>
-            <option value="3">Three</option>
-          </select>
-        </div>
-    </div>
-    <div class="list-card">
-      <div class="item-style">
-        <app-property-card>
-        </app-property-card>
-      </div>
-      <div class="item-style">
-        <app-property-card>
-        </app-property-card>
-      </div>
-      <div class="item-style">
-        <app-property-card>
-        </app-property-card>
-      </div>
+        <div class="list-card">
+          <div class="item-style">
+            <app-property-card>
+            </app-property-card>
+          </div>
+          <div class="item-style">
+            <app-property-card>
+            </app-property-card>
+          </div>
+          <div class="item-style">
+            <app-property-card>
+            </app-property-card>
+          </div>
 
-      <div class="item-style">
-        <app-property-card>
-        </app-property-card>
+          <div class="item-style">
+            <app-property-card>
+            </app-property-card>
+          </div>
+
+          <div class="item-style">
+            <app-property-card>
+            </app-property-card>
+          </div>
+          <div class="item-style">
+            <app-property-card>
+            </app-property-card>
+          </div>
+          <div class="item-style">
+            <app-property-card>
+            </app-property-card>
+          </div>
+
+          <div class="item-style">
+            <app-property-card>
+            </app-property-card>
+          </div>
+          <div class="item-style">
+            <app-property-card>
+            </app-property-card>
+          </div>
+
+          <div class="item-style">
+            <app-property-card>
+            </app-property-card>
+          </div>
+
+
+        </div>
       </div>
     </div>
   </div>
