--- a/src/app/pages/shopping-cart/shopping-cart.component.html
+++ b/src/app/pages/shopping-cart/shopping-cart.component.html
@@ -63,9 +63,9 @@
             Totals: <span>£219.00</span>
           </div>
 
-          <button class="form-control">
+          <a type="button" class="form-control" routerLink="checkout">
             Proceed To Checkout
-          </button>
+          </a>
         </div>
       </div>
     </div>
