--- a/src/app/pages/shopping-cart/shopping-cart.component.scss
+++ b/src/app/pages/shopping-cart/shopping-cart.component.scss
@@ -76,7 +76,9 @@ img {
       border-bottom: 2px solid #E8E6F1;
     }
 
-    button {
+    a {
+      text-align: center;
+      text-decoration: none;
       margin-top: 60px;
       background: #19D16F;
       border: none;
