--- a/docs/assets/css/root-style.scss
+++ b/docs/assets/css/root-style.scss
@@ -125,3 +125,11 @@ body {
   margin-top: 100px;
   margin-bottom: 100px;
 }
+
+.p-relative {
+  position: relative;
+}
+
+.width-33 {
+  width: 33%;
+}
